@@ -1,15 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-AUX 99_mod_httpbl.conf 197 RMD160 453eb8ee5caf722748b2a3f58aadedc656d50c99 SHA1 997bd02218318fd9c620f56ad2f338c0d73516b5 SHA256 de7ce4c9efd96864a69488815f69a8b2c9f8b28a7abfa37d05b3e9e3d5461556
+AUX 99_mod_httpbl.conf 218 RMD160 27516bf17e216e46df13d6b92c595cd15aee0674 SHA1 46ebd72ef3d0e50b08d1bd24b2f88a7d427bc5da SHA256 2571339c5f96ab3f034b2196c10f254f17a75a7617a7e7c700a231a3ae1a8811
 DIST mod_httpbl-1.5.c 360927 RMD160 5eb4445671a9d68e783a0dc7833916c92215142e SHA1 87b21bdfb387e68c740a0ab62c512fd7ba1d3fb5 SHA256 803c76aab001e123e2bbb74407d036c0986c598ef775ded7d70618a311520a00
-EBUILD mod_httpbl-1.5.ebuild 1902 RMD160 201abc875bc017aac891d79ce066a6920eb7e833 SHA1 953c622f94718877003ccda46ad595cee4e30681 SHA256 d6260866431837c9e9ced747552090a79b46fc4f713718669cdf2336f98a6b41
-MISC ChangeLog 480 RMD160 1824f280344af6d6cbb4936005ad1dfa26f1be4a SHA1 980d6ca31377e7321bc99be442160bad817b1f07 SHA256 8069cc56332616da0f0fe186ad2fc7b30ab100c3269d55cfff14b6e0b332aca7
+EBUILD mod_httpbl-1.5.ebuild 2114 RMD160 7c118999352a09befd40c626b3c7f4c7606450af SHA1 3001dd13ccafc58c307434d7c38e0fa87e7fc84a SHA256 dc22e390fca47f72b795ddee9b8faa9cba498f94e3fa79d01013914fb68e97e8
+MISC ChangeLog 651 RMD160 ff67f42cd9dec5a189c4a1f1a0216c9d090ad06c SHA1 671e5609c48fd1efb0336b76e5358861f164aeb3 SHA256 9d768188be0aad07dff1898d8588ccd95de9a316dba957380a7a592201687d66
 MISC metadata.xml 267 RMD160 511ac4eac08cf7c7598b7f0dd2c2a7b54b2a6d17 SHA1 7cfd482a8ab9b30e3e424c19cfef49ccc93013c8 SHA256 0c11886362b779764fbeda77806037b3625b1c11375b7ecc1b7ad3e20ec6a1ac
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.13 (GNU/Linux)
 
-iEYEARECAAYFAksOWk0ACgkQAiZjviIA2Xh34gCcDBQQ9YeEPC8z/ShEODuVNxdO
-JMIAnAtM8FyUYdqkvX6rTkXE14J+6dVx
-=itEs
+iEYEARECAAYFAksO55IACgkQAiZjviIA2Xj2nQCdFWK/A9qmfZBaJMdO6oZglCjw
+KwcAoNxMBaccRJK9Nd6RSfD3a5Bo1uJo
+=eHOo
 -----END PGP SIGNATURE-----
