@@ -1,6 +1,8 @@
 <IfDefine HTTPBL>
 LoadModule httpbl_module modules/mod_httpbl.so
 
+HTTPBLRBLEnabled On
+
 HTTPBLLogDir /var/log/apache2/httpbl
 HTTPBLReposDir /var/cache/mod_httpbl
 
