@@ -1,6 +1,10 @@
 # ChangeLog for www-apache/mod_httpbl
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_httpbl/Attic/ChangeLog,v 1.1 2009/11/26 10:37:09 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_httpbl/Attic/ChangeLog,v 1.2 2009/11/26 20:39:59 flameeyes Exp $
+
+  26 Nov 2009; Diego E. Pettenò <flameeyes@gentoo.org>
+  files/99_mod_httpbl.conf, mod_httpbl-1.5.ebuild:
+  Enable httpbl in the configuration and add a debug USE flag.
 
 *mod_httpbl-1.5 (26 Nov 2009)
 
